--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,7 +33,7 @@
 }
 
 #view-slidder {
-    -webkit-transform:translate3D(0,0,0);
+    //-webkit-transform:translate3D(0,0,0);
     position:absolute;
     z-index: 51;
     left:0;
